--- a/zookeeper/build.gradle
+++ b/zookeeper/build.gradle
@@ -5,15 +5,18 @@ plugins {
 repositories {
     mavenLocal()
     maven {
+        url = 'http://central.maven.org/maven2/'
+    }
+    maven {
         url = 'http://repo.maven.apache.org/maven2'
     }
 }
 
 dependencies {
-    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '1.0.0'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.26'
-    compile 'log4j:log4j:1.2.17'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'commons-io:commons-io:2.5'
+    compile 'org.apache.curator:curator-recipes:2.12.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    testCompile 'junit:junit:4.12'
 }
 
 group 'yoloz'
@@ -27,13 +30,3 @@ tasks.withType(JavaCompile) {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
 }
-
-task copyJar(type: Copy) {
-    from configurations.runtime
-    from('build/libs') {
-        include('*.jar')
-    }
-    into 'build/lib'
-}
-
-
