--- a/zookeeper/build.gradle
+++ b/zookeeper/build.gradle
@@ -13,9 +13,9 @@ repositories {
 }
 
 dependencies {
-    compile 'commons-io:commons-io:2.5'
-    compile 'org.apache.curator:curator-recipes:2.12.0'
-    compile 'com.google.code.gson:gson:2.8.0'
+    compile group: 'io.kamon', name: 'sigar-loader', version: '1.6.6'
+    compile group: 'org.apache.curator', name: 'curator-framework', version: '2.13.0'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.29'
     testCompile 'junit:junit:4.12'
 }
 
