--- a/hdfs/pom.xml
+++ b/hdfs/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>bigdataSamples</groupId>
+    <groupId>Samples</groupId>
     <artifactId>hdfs</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
@@ -25,6 +25,12 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>2.5.1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jdk.tools</artifactId>
+                    <groupId>jdk.tools</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
