--- a/samples-hbase/pom.xml
+++ b/samples-hbase/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>1.3.0</version>
+            <version>2.2.4</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jdk.tools</artifactId>
@@ -29,6 +29,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
 
