--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>samples-tableStore</module>
         <module>samples-zookeeper</module>
         <module>samples-ssl</module>
+        <module>samples-sqlParser</module>
     </modules>
 
     <dependencies>
