--- a/samples-es/pom.xml
+++ b/samples-es/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>23.0</version>
+            <version>[24.1.1,)</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.7</version>
+            <version>[2.13.2,)</version>
         </dependency>
     </dependencies>
 
