--- a/samples-jdbc/pom.xml
+++ b/samples-jdbc/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-jdbc</artifactId>
-            <version>2.1.1</version>
+            <version>[2.3.4,)</version>
             <classifier>standalone</classifier>
         </dependency>
         <dependency>
