--- a/samples-jdbc/pom.xml
+++ b/samples-jdbc/pom.xml
@@ -67,5 +67,10 @@
             <version>0.6.2</version>
             <systemPath>${project.basedir}/lib/cassandra-jdbc-driver-0.6.2-shaded.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.7.0.0</version>
+        </dependency>
     </dependencies>
 </project>
