instrument使用; mysql年份和blob使用; dom xml使用;

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>sample-jdbc</module>
         <module>sample-http</module>
         <module>sample-xml</module>
+        <module>sample-instrument</module>
     </modules>
 
     <dependencies>
