--- a/sample-es/pom.xml
+++ b/sample-es/pom.xml
@@ -5,23 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-es</artifactId>
-    <version>${sample.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
     <description>es demo</description>
-
-    <repositories>
-        <repository>
-            <id>maven2.org</id>
-            <name>centralMaven</name>
-            <url>http://central.maven.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <!--restful client-->
@@ -53,7 +44,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.9</version>
+            <version>2.10.1</version>
         </dependency>
         <!--java client-->
         <dependency>
@@ -61,11 +52,7 @@
             <artifactId>transport</artifactId>
             <version>5.3.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>[2.13.2,)</version>
-        </dependency>
+
     </dependencies>
 
 </project>
