--- a/sample-hbase/pom.xml
+++ b/sample-hbase/pom.xml
@@ -5,15 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
 
     <artifactId>sample-hbase</artifactId>
-    <version>${sample.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -30,13 +29,9 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.9</version>
+            <version>2.10.1</version>
         </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
+
     </dependencies>
 
 </project>
