--- a/sample-hive/pom.xml
+++ b/sample-hive/pom.xml
@@ -5,27 +5,51 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-hive</artifactId>
-    <version>${sample.version}</version>
-
+    <version>1.0.0-SNAPSHOT</version>
+    <!-- Blocked mirror for repositories: [conjars (http://conjars.org/repo, default, releases+snapshots), apache.snapshots (http://repository.apache.org/snapshots, default, snapshots)]-->
     <dependencies>
         <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-service</artifactId>
-            <version>2.3.3</version>
+            <version>2.3.9</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jdk.tools</artifactId>
                     <groupId>jdk.tools</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>org.apache.hadoop</artifactId>
+                    <groupId>hadoop-common</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.thrift</groupId>
+                    <artifactId>libthrift</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>3.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.18.0</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.cloudera</groupId>-->
+        <!--            <artifactId>ImpalaJDBC42</artifactId>-->
+        <!--            <scope>system</scope>-->
+        <!--            <version>9</version>-->
+        <!--            <systemPath>${project.basedir}/lib/ImpalaJDBC42.jar</systemPath>-->
+        <!--        </dependency>-->
     </dependencies>
 
 </project>
