--- a/sample-instrument/pom.xml
+++ b/sample-instrument/pom.xml
@@ -2,22 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!--    <parent>-->
-    <!--        <artifactId>samples</artifactId>-->
-    <!--        <groupId>com.yoloz.sample</groupId>-->
-    <!--        <version>1.0</version>-->
-    <!--    </parent>-->
+
+    <parent>
+        <artifactId>samples-java</artifactId>
+        <groupId>com.yoloz.sample</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sample-instrument</artifactId>
-    <groupId>com.yoloz.sample</groupId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.javassist</groupId>
@@ -29,7 +27,7 @@
             <artifactId>tools</artifactId>
             <scope>system</scope>
             <version>1.8</version>
-            <systemPath>/opt/jdk1.8.0_162/lib/tools.jar</systemPath>
+            <systemPath>/opt/jdk-8/lib/tools.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
