--- a/sample-jdbc/pom.xml
+++ b/sample-jdbc/pom.xml
@@ -5,14 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-jdbc</artifactId>
-    <version>${sample.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
@@ -20,11 +19,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>mysql</groupId>-->
-        <!--            <artifactId>mysql-connector-java</artifactId>-->
-        <!--            <version>5.1.48</version>-->
-        <!--        </dependency>-->
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -50,23 +45,7 @@
             <artifactId>clickhouse-jdbc</artifactId>
             <version>0.2.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.hive</groupId>
-            <artifactId>hive-jdbc</artifactId>
-            <version>2.3.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-common</artifactId>
-            <version>3.2.4</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.cloudera</groupId>-->
-<!--            <artifactId>ImpalaJDBC42</artifactId>-->
-<!--            <scope>system</scope>-->
-<!--            <version>9</version>-->
-<!--            <systemPath>${project.basedir}/lib/ImpalaJDBC42.jar</systemPath>-->
-<!--        </dependency>-->
+
         <dependency>
             <groupId>com.dbschema</groupId>
             <artifactId>cassandraJdbc</artifactId>
@@ -78,6 +57,11 @@
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
             <version>19.7.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vertica.jdbc</groupId>
+            <artifactId>vertica-jdbc</artifactId>
+            <version>10.0.1-0</version>
         </dependency>
     </dependencies>
 </project>
