--- a/sample-jsch/pom.xml
+++ b/sample-jsch/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <version>1.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
