--- a/sample-kafka/pom.xml
+++ b/sample-kafka/pom.xml
@@ -5,30 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-kafka</artifactId>
-    <version>${sample.version}</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.4.1</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.26</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
         </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
+
     </dependencies>
 </project>
