--- a/sample-sqlParser/pom.xml
+++ b/sample-sqlParser/pom.xml
@@ -3,15 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sample-sqlParser</artifactId>
-    <version>${sample.version}</version>
 
     <properties>
         <shardingsphere.version>4.1.0</shardingsphere.version>
