--- a/sample-ssl/pom.xml
+++ b/sample-ssl/pom.xml
@@ -5,15 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
 
     <artifactId>sample-ssl</artifactId>
-    <version>${sample.version}</version>
 
     <dependencies>
         <dependency>
