--- a/sample-syslog/pom.xml
+++ b/sample-syslog/pom.xml
@@ -5,22 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-syslog</artifactId>
-    <version>${sample.version}</version>
-
-    <repositories>
-        <repository>
-            <id>maven2.org</id>
-            <name>centralMaven</name>
-            <url>http://central.maven.org/maven2/</url>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
