--- a/sample-xml/pom.xml
+++ b/sample-xml/pom.xml
@@ -5,18 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>samples-java</artifactId>
         <groupId>com.yoloz.sample</groupId>
-        <artifactId>samples</artifactId>
-        <version>${sample.version}</version>
-        <relativePath>../</relativePath>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sample-xml</artifactId>
-    <version>${sample.version}</version>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
 
 </project>
