--- a/sample-netty/pom.xml
+++ b/sample-netty/pom.xml
@@ -4,14 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>samples-java</artifactId>
-        <groupId>com.yoloz.sample</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
-
     <artifactId>sample-netty</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <groupId>indi.yolo.sample</groupId>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <jdk.version>8</jdk.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -19,6 +21,19 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.42.Final</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>4.2.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
