--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <jdk.version>8</jdk.version>
     </properties>
 
-    <groupId>com.yoloz.sample</groupId>
+    <groupId>indi.yoloz.sample</groupId>
     <artifactId>samples-java</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
