--- a/sample-jdbc/pom.xml
+++ b/sample-jdbc/pom.xml
@@ -73,6 +73,14 @@
         </dependency>
 
         <dependency>
+            <groupId>com.dbschema</groupId>
+            <artifactId>cassandraJdbc</artifactId>
+            <scope>system</scope>
+            <version>8.1.3</version>
+            <systemPath>${project.basedir}/lib/DmJdbcDriver18.jar</systemPath>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.8.2</version>
